src/content/docs/manual/bluetape4k-image/1.0/modules/bluetape4k-images-spring-boot.md
---
slug: "manual/bluetape4k-image/1.0/modules/bluetape4k-images-spring-boot"
manualId: "bluetape4k-images-spring-boot"
id: "bluetape4k-images-spring-boot"
title: "Spring Boot image platform"
locale: "en"
kind: "library"
gradlePath: ":bluetape4k-images-spring-boot"
sourceDir: "images-spring-boot"
releaseRef: "1.0.0"
artifact: io.github.bluetape4k.image:bluetape4k-images-spring-boot
manual:
  id: "bluetape4k-images-spring-boot"
  repository: "bluetape4k-image"
  group: "frameworks"
  kind: "library"
  sourceCommit: "b38d4891b66dff8bc63db0018b5e41810d1da9bc"
  sourcePath: "docs/manual/bluetape4k-image/en/modules/bluetape4k-images-spring-boot.md"
  minorVersion: "1.0"
  releaseRef: "1.0.0"
  releaseCommit: "b38d4891b66dff8bc63db0018b5e41810d1da9bc"
  sourceDir: "images-spring-boot"
  layer: "build"
---


> Library module

## Problem

This Spring Boot 4 module wires image object storage, optional signed URLs, reactive health, and Micrometer metrics. It defines a stable coroutine `ImageStorage` boundary and chooses local or S3-backed implementations from configuration.

Despite its name, release `1.0.0` does not auto-register an image processor or filter pipeline; its processing auto-configuration only binds properties.

## When to use it

Use it when a Spring Boot service needs local/S3 image persistence and operational integration. Use `bluetape4k-images` directly for processing and add this module only for storage/CDN/health/metrics wiring.

## Coordinates

Maven coordinate: `io.github.bluetape4k.image:bluetape4k-images-spring-boot`

```kotlin
dependencies {
    implementation(platform("io.github.bluetape4k:bluetape4k-dependencies:<version>"))
    implementation("io.github.bluetape4k.image:bluetape4k-images-spring-boot")
}
```

## Core concepts

`ImageObjectKey` validates prefix/name and blocks `..`. `ImageStorage` provides suspend upload/download/delete/exists and cold-flow listing. `ImageStorageException` is sealed into not-found, access-denied, conflict, transient, and validation failures. Optional decorators provide signed URLs, health, and metrics.

## Quick start

```yaml
bluetape4k:
  images:
    storage:
      enabled: true
      backend: local
      max-size-bytes: 52428800
      local:
        root-dir: /var/lib/app/images
        bootstrap-prefixes: [avatars]
```

```kotlin
val key = ImageObjectKey.of("avatars", "user-42.jpg")
storage.upload(key, bytes, UploadOptions(contentType = "image/jpeg"))
val saved = storage.download(key)
```

Local storage provisions only `local.bootstrap-prefixes` during trusted startup.
Runtime uploads never create missing parent directories because the JDK
`SecureDirectoryStream` API has no descriptor-relative `mkdirat` operation.
Provision every fixed prefix before serving requests; an unprepared parent
fails with `ValidationException` without leaving an external directory side effect.

## API by task

- Store locally with `LocalImageStorage` or select S3 with `backend=s3` and an `S3Operations` bean.
- Upload/download bytes or paths; list keys as a cold `Flow`.
- Generate S3 presigned read/write URLs or CloudFront read URLs when CDN is enabled.
- Enable the reactive health indicator and Micrometer decorator when those APIs are present.
- Override any auto-configured bean with an application `ImageStorage` or signer.

## Recommended patterns

Use explicit persistent local storage; the default is under the JVM temp directory. Treat `ValidationException` as a client problem, `NotFoundException` as absence, and `TransientException` as the only generally retryable class. Re-throw coroutine cancellation in custom implementations.

Do not assume the interface's atomic-upload requirement means crash-atomic local replacement in `1.0.0`: the local implementation uses `Files.write`/`Files.copy(REPLACE_EXISTING)`, not a temporary file plus atomic rename.

## Integrations

S3 uses `bluetape4k-aws-spring-boot` `S3Operations`. CloudFront and S3 presigning are optional classpath integrations. Health needs Spring Boot health plus coroutines-reactor; metrics needs Micrometer.

## Configuration

Storage defaults: enabled, `LOCAL`, 50 MiB upload/download limit, temp-root local directory. Selecting `S3` requires a non-blank bucket when `S3Operations` exists. If `backend=s3` but no `S3Operations` bean is available, release `1.0.0` deliberately falls back to local storage.

CDN is disabled by default. Providers are `s3_presign` and `cloudfront`. CloudFront requires exactly one private-key source; prefer a mounted `privateKeyPath`. Health and metrics default to enabled when their supporting classes exist.

## Failure modes

Storage failures use the sealed exception hierarchy. S3 401/403 maps to access denied, 404 to not found, 409 to conflict, and other SDK failures to transient. `exists` must not convert access errors to `false`. Invalid keys, sizes, and upload MIME types fail validation; SVG is intentionally excluded from allowed upload types.

## Operations

Metrics cover upload/download duration and errors under `images.storage.*`. Health calls `exists` on `_health/<probeKey>` and reports reachability, not object presence. CloudFront key properties are redacted by `toString` and an Actuator sanitizing function.

## Testing

Use auto-configuration tests with `ApplicationContextRunner`, local storage contract tests, metric and health tests, and key/sanitization tests. Add an integration test for the application's real S3-compatible endpoint; the release suite does not include an S3 storage integration test.

## Workshops and learning path

Run `examples/spring-boot-image-api`, then inspect local storage, switch to an explicit S3 environment, add signed URLs, and only then enable production health/metrics alerts.

## Limitations

S3 path uploads are read into a byte array because `S3Operations` has no streaming upload in this release. `UploadOptions.cacheControl` and metadata are not forwarded by `S3ImageStorage`. Its size precheck uses listing because no HEAD operation is exposed. Use the lower-level AWS SDK for large streams or required headers.

<!-- release-readme-diagrams:start -->
## Release diagrams

These diagrams are loaded directly from README assets published with the `1.0.0` release and pinned to its immutable commit. They describe this manual's released structure and runtime flows, not later Snapshot changes. Select a preview to open the SVG at the same release commit.

### Images Spring Boot Architecture diagram

[![Images Spring Boot Architecture diagram](https://raw.githubusercontent.com/bluetape4k/bluetape4k-image/b38d4891b66dff8bc63db0018b5e41810d1da9bc/docs/images/readme-diagrams/images-spring-boot-architecture-01.png)](https://github.com/bluetape4k/bluetape4k-image/blob/b38d4891b66dff8bc63db0018b5e41810d1da9bc/docs/images/readme-diagrams/images-spring-boot-architecture-01.svg)

_Release README: [`images-spring-boot/README.md`](https://github.com/bluetape4k/bluetape4k-image/blob/b38d4891b66dff8bc63db0018b5e41810d1da9bc/images-spring-boot/README.md)_

<!-- release-readme-diagrams:end -->

## Sources

- [Storage contract](https://github.com/bluetape4k/bluetape4k-image/blob/1.0.0/images-spring-boot/src/main/kotlin/io/bluetape4k/images/spring/storage/ImageStorage.kt)
- [Storage auto-configuration](https://github.com/bluetape4k/bluetape4k-image/blob/1.0.0/images-spring-boot/src/main/kotlin/io/bluetape4k/images/spring/autoconfigure/ImagesStorageAutoConfiguration.kt)
- [S3 implementation and constraints](https://github.com/bluetape4k/bluetape4k-image/blob/1.0.0/images-spring-boot/src/main/kotlin/io/bluetape4k/images/spring/storage/s3/S3ImageStorage.kt)
- [Release build](https://github.com/bluetape4k/bluetape4k-image/blob/1.0.0/images-spring-boot/build.gradle.kts)
